
        * Fix elm to use key not keyname (otherwise xmodmap and friends
        don't work).

2013-08-09  Cedric Bail

        * Add support for URL in Elm_Image with the following new smart
        callback : "download,start", "download,progress", "download,done",
        "download,error".

2013-08-10  ChunEon Park (Hermet)

        * Popup: Fix the corrupted internal widget tree that caused
        elm_theme_set() doesn't work correctly.

2013-08-11  Daniel Juyung Seo (SeoZ)

        * Win Focus: Added elm_win_focus_highlight_animate_set/get().

2013-08-12  Cedric Bail

        * Add URL support to Elm_Photocam with the same callback as URL suport
        in Elm_Image.

2013-08-12  ChunEon Park (Hermet)

        * Mapbuf: Ensure that content size calculation is correctly finished
        because the mapbuf is willing to block the size calculation forcely.

2013-08-19  ChunEon Park (Hermet)

        * Popup: Support "language,changed" smart callback.

2013-08-22  Thiep Ha

        * Add hide effect for notify.

2013-08-22  ChunEon Park (Hermet)

        * Widget: Improve performance in applying widget theme. It prevents
        applying themes more strictly if it tries to apply same theme. This
        increases the performance hugely in case that user applies a specific
        theme to the window object.

2013-08-26  Daniel Juyung Seo (SeoZ)

        * Gengrid: implement selectraise feature.

2013-08-28  Daniel Juyung Seo (SeoZ)

        * Bg: Add bg reset feature.

2013-09-02  ChunEon Park (Hermet)

        * Widget: Introduce elm_object_item_object_get() API.

2013-09-04  Ryuan Choi (ryuan)

        * elm_config : profile may be broken when clicked reset button in profiles tab

2013-09-07  Shinwoo Kim

        * elm_access : delete access object in job when its hover object is deleted

2013-09-10  Niraj Kumar

        * ProgressBar: Added support for more than one progress status  in  a
          single progress bar