@@ -277,6 +277,7 @@ Fixes:
    This prevents the asynchronous states between ime and conformant.
    * Flip : Fix the flip page to not flip on a direction if the direction is disabled.
    * Spinner : change part name to access.text from access_text on default style.
+   * Fix fileselector only send "selected" signal without selection when file path is typed on the path entry.
 
 Removals:
 
